# easycoin

./: .gitignore  AGENTS.md  changelog.md  pyproject.toml  readme.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  release_checklist.md
docs/: cache.md  config.md  cryptoworker.md  gameset.md  helpers.md  models.md  network.md  sequence.md  state.md  utxoset.md
easycoin/: UTXOSet.py  __init__.py  cache.py  cli.py  config.py  constants.py  cryptoworker.py  cui.py  english.py  errors.py  gameset.py  helpers.py  misc.py  node.py  sequence.py  state.py  version.py
easycoin/cui/: __init__.py  app.py  clipboard.py  config.py  helpers.py  state.py  styles.tcss
easycoin/cui/screens/: __init__.py  base.py  dashboard.py  event_log_modal.py  help_modal.py  welcome.py
easycoin/cui/screens/coins/: __init__.py  coin_detail_modal.py  coins_screen.py  mine_coin_modal.py  mine_config.py  placeholder.py
easycoin/cui/screens/network/: __init__.py  add_peer.py  network_screen.py  placeholder.py
easycoin/cui/screens/onboarding/: __init__.py  configure.py  join_trustnet.py  onboarding.py  restore_wallet.py  setup_wallet.py
easycoin/cui/screens/repl/: __init__.py  repl_modal.py
easycoin/cui/screens/settings/: __init__.py  activate_gameset_modal.py  create_gameset_modal.py  settings_screen.py
easycoin/cui/screens/stamps/: __init__.py  create_stamp.py  (+3 more)
easycoin/cui/widgets/: __init__.py  coin_detail_modal.py  confirmation_modal.py  decompiled_lock_modal.py  event_log.py  file_picker_modal.py  forms.py  input_modal.py  option_modal.py  right_sidebar.py  sigflags_modal.py  status_bar.py  tables.py  textarea.py  top_tabs.py
easycoin/models/: Address.py  Attestation.py  Chunk.py  Coin.py  Confirmation.py  Input.py  Output.py  Snapshot.py  StampTemplate.py  TrustNet.py  TrustNetFeature.py  Txn.py  Wallet.py  __init__.py
misc/: doxit.sh
tests/: context.py  test_cache_and_sequence.py  test_chunks_and_snapshots.py  test_coin.py  test_cryptoworker.py  test_gameset.py  test_misc.py  test_stamp_template.py  test_trustnets_chunks_and_snapshots.py  test_txn.py  test_utxoset.py  test_wallet.py  test_wallet_and_address.py
(+38 files in other folders)
