[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easycoin"
version = "0.0.1"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
dependencies = [
  "packify >= 0.3.1",
  "sqloquent >= 0.7.0",
  "tapescript >= 0.7.1",
  "tapehash >= 0.1.0",
]
description = "Proof-of-concept + proof-of-work - consensus = easycoin."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/easycoin"
"Repository" = "https://github.com/k98kurz/easycoin"
"Bug Tracker" = "https://github.com/k98kurz/easycoin/issues"

[project.optional-dependencies]
node = [
  "netaio >= 0.0.7",
]
cui = [
  "textual >= 3.2.0",
  "netaio >= 0.0.7",
]

[project.scripts]
easycoin = "easycoin.cli:run"

